[Ft #154245374]Add Login and register templates

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.center {
+  margin: auto;
+  width: 90%;
+  padding: 10px;
+}
+
