[Feature #154699387] Add CRUD for recipes
 Add Create,view,update and delete functionality for recipes. Also have made recipes links in the dashboard so that they are fully viewed incase the link is clicked.

--- a/src/components/styling.css
+++ b/src/components/styling.css
@@ -49,3 +49,20 @@
 .addbutton{
     margin :30px;
 }
+.select {
+    font: inherit;
+    width:250px; 
+    height:30px;
+    overflow:hidden;
+    background-color:transparent;
+    border: 1;
+}
+.diva{
+    width:250px;
+}
+.text2{
+    font-family: Roboto, sans-serif;
+    color:rgb(178, 178, 178);
+}
+
+
